--- a/index.html
+++ b/index.html
@@ -144,13 +144,22 @@
             <p class="w3-wide">Professional Experience</p>
             <div class="w3-row w3-center w3-dark-grey w3-padding-16 w3-section">
                 <div class="w3-quarter w3-section">
-                    <span class="w3-xlarge">5 months</span><br> Triencon Services
+                    <span class="w3-xlarge">5 months</span><br>
+                    Psoition: Software Engineer Intern
+                    Employer: Triencon Services
+                    Location: Texas, United States
                 </div>
                 <div class="w3-quarter w3-section">
-                    <span class="w3-xlarge">1 year</span><br> University of Texas at Arlington
+                    <span class="w3-xlarge">1 year</span><br>
+                    Position: Graduate Student Assistant Lead
+                    Employer: University of Texas at Arlington
+                    Location: Texas, United States
                 </div>
                 <div class="w3-quarter w3-section">
-                    <span class="w3-xlarge">2 years</span><br> Wipro Limited
+                    <span class="w3-xlarge">2 years</span><br> 
+                    Position: Software Engineer
+                    Employer: Wipro Limited
+                    Location: Pune, India
                 </div>
             </div>
 
