--- a/index.html
+++ b/index.html
@@ -149,12 +149,16 @@
                     Employer: Triencon Services
                     Location: Texas, United States
                 </div>
+            </div>
+            <div class="w3-row w3-center w3-dark-grey w3-padding-16 w3-section">
                 <div class="w3-quarter w3-section">
                     <span class="w3-xlarge">1 year</span><br>
                     Position: Graduate Student Assistant Lead
                     Employer: University of Texas at Arlington
                     Location: Texas, United States
                 </div>
+            </div>
+            <div class="w3-row w3-center w3-dark-grey w3-padding-16 w3-section">
                 <div class="w3-quarter w3-section">
                     <span class="w3-xlarge">2 years</span><br> 
                     Position: Software Engineer
