--- a/index.html
+++ b/index.html
@@ -142,28 +142,28 @@
                 <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:85%">95%</div>
             </div><br>
             <p class="w3-wide">Professional Experience</p>
-            <div class="w3-row w3-center w3-dark-grey w3-padding-16 w3-section">
-                <div class="w3-quarter w3-section">
+            <div class="w3-row w3-center w3-dark-grey w3-padding-16 w3-section" style="width:60%">
+                <div class=".w3-padding-16">
                     <span class="w3-xlarge">5 months</span><br>
-                    Psoition: Software Engineer Intern
-                    Employer: Triencon Services
-                    Location: Texas, United States
+                    <p style="font-size:20px">Position: Software Engineer Intern</p>
+                    <p>Employer: Triencon Services </p>
+                    <p>Location: Texas, United States </p>
                 </div>
             </div>
-            <div class="w3-row w3-center w3-dark-grey w3-padding-16 w3-section">
-                <div class="w3-quarter w3-section">
+            <div class="w3-row w3-center w3-dark-grey w3-padding-16 w3-section" style="width:60%">
+                <div class=".w3-padding-16">
                     <span class="w3-xlarge">1 year</span><br>
-                    Position: Graduate Student Assistant Lead
-                    Employer: University of Texas at Arlington
-                    Location: Texas, United States
+                    <p style="font-size:20px">Position: Graduate Student Assistant Lead</p>
+                    <p>Employer: University of Texas-Arlington </p>
+                    <p>Location: Texas, United States </p>
                 </div>
             </div>
-            <div class="w3-row w3-center w3-dark-grey w3-padding-16 w3-section">
-                <div class="w3-quarter w3-section">
-                    <span class="w3-xlarge">2 years</span><br> 
-                    Position: Software Engineer
-                    Employer: Wipro Limited
-                    Location: Pune, India
+            <div class="w3-row w3-center w3-dark-grey w3-padding-16 w3-section" style="width:60%">
+                <div class=".w3-padding-16">
+                    <span class="w3-xlarge">2 years</span><br>
+                    <p style="font-size:20px">Position: Software Engineer</p>
+                    <p>Employer: Wipro </p>
+                    <p>Location: Pune, India</p>
                 </div>
             </div>
 
