--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <div class="w3-light-grey">
                 <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:85%">95%</div>
             </div><br>
-            <p class="w3-wide">Professional Experience</p>
+            <p class="w3-padding-16">Professional Experience</p>
             <div class="w3-row w3-center w3-dark-grey w3-padding-16 w3-section" style="width:60%">
                 <div class=".w3-padding-16">
                     <span class="w3-xlarge">5 months</span><br>
