--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         <!-- About Section -->
         <div class=".w3-padding-16" id="about">
-            <h2 class=".w3-padding-16">About</h2>
+            <h3 class=".w3-padding-16">About</h3>
             <hr class=".w3-padding-16">
             <p>A computer science professional with a master's degree from the University of Texas at Arlington and a bachelor's degree from the University of Mumbai. I specialize in software development, web-based application development, and data analysis.
                 My technical skills include proficiency in JavaScript, Python, and Java. I have experience with frameworks like Django, Flask, and ReactJS. I've worked with SQL, MySQL, and MongoDB databases, and I'm familiar with cloud technologies such
@@ -141,7 +141,7 @@
             <div class="w3-light-grey">
                 <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:85%">95%</div>
             </div><br>
-            <p class="w3-padding-16">Professional Experience</p>
+            <h3 class="w3-padding-16">Professional Experience</h3>
             <div class="w3-row w3-center w3-dark-grey w3-padding-16 w3-section" style="width:60%">
                 <div class=".w3-padding-16">
                     <span class="w3-xlarge">5 months</span><br>
