--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         color: black;
     }
     
+    .w3-text-grey {
+        color: black;
+    }
+    
     @media (max-width: 600px) {
         /* CSS code for smaller screens */
     }
