--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h1 class="w3-jumbo"><b>Priyanka Patil</b></h1>
             <p>Software Engineer</p>
             <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
-            <i class="fa fa-download" onclick=""><a href="./pdf/Priyanka_Muralidhar_Patil_.pdf" target="_blank"> Download Resume </a></i>
+            <i class="fa fa-download" onclick=""><a href="./pdf/Priyanka_Patil.pdf" target="_blank"> Download Resume </a></i>
             </button>
         </header>
         
@@ -174,7 +174,7 @@
             </div>
 
             <button class="w3-button w3-light-grey w3-padding-large w3-section">
-            <i class="fa fa-download" onclick=""><a href="./pdf/Priyanka_Muralidhar_Patil_.pdf" target="_blank"> Download Resume </a></i>
+            <i class="fa fa-download" onclick=""><a href="./pdf/Priyanka_Patil.pdf" target="_blank"> Download Resume </a></i>
             </button>
 
             <!-- Grid for tables -->
