--- a/index.html
+++ b/index.html
@@ -147,6 +147,15 @@
             <div class="w3-light-grey">
                 <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:85%">95%</div>
             </div><br>
+            <h3 class="w3-padding-16">Volunteering</h3>
+            <div class="w3-row w3-center w3-dark-grey w3-padding-16 w3-section" style="width:60%">
+                <div class=".w3-padding-16">
+                    <span class="w3-xlarge">Present</span><br>
+                    <p style="font-size:20px">Position: Data Analyst Volunteer</p>
+                    <p>Non-Profit Organization: Bright Mind Enrichment and Schooling </p>
+                    <p>Location: California, United States </p>
+                </div>
+            </div>
             <h3 class="w3-padding-16">Professional Experience</h3>
             <div class="w3-row w3-center w3-dark-grey w3-padding-16 w3-section" style="width:60%">
                 <div class=".w3-padding-16">
