--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <hr class="w3-opacity">
 
             <div class="w3-section">
-                <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> California, US</p>
+                <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> California, USA</p>
                 <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +1 (682)-336-7197</p>
                 <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: ppatil1851@gmail.com</p>
             </div>
