--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </nav>
 
     <!-- Page Content -->
-    <div class="w3-main w3-padding-large" style="margin-left:40%; color:white">
+    <div class="w3-main w3-padding-large" style="margin-left:20%; color:white">
 
         <!-- Menu icon to open sidebar -->
         <span class="w3-button w3-top w3-white w3-xxlarge w3-text-grey w3-hover-text-black" style="width:auto;right:0;" onclick="openNav()"><i class="fa fa-bars"></i></span>
@@ -137,7 +137,8 @@
         </div>
 
         <!-- About Section -->
-        <h3 class="w3-padding-16">My Skills</h3>
+        <h3 class=".w3-padding-16">Skills</h3>
+            <hr class=".w3-padding-16">
             <p class="w3-wide">Python</p>
             <div class="w3-light-grey">
                 <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:95%">95%</div>
@@ -159,6 +160,7 @@
                 <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:85%">95%</div>
             </div><br>
             <h3 class="w3-padding-16">Volunteering</h3>
+            <hr class=".w3-padding-16">
             <div class="w3-row w3-center w3-dark-grey w3-padding-16 w3-section" style="width:60%">
                 <div class=".w3-padding-16">
                     <span class="w3-xlarge">Present</span><br>
@@ -168,6 +170,7 @@
                 </div>
             </div>
             <h3 class="w3-padding-16">Professional Experience</h3>
+            <hr class=".w3-padding-16">
             <div class="w3-row w3-center w3-dark-grey w3-padding-16 w3-section" style="width:60%">
                 <div class=".w3-padding-16">
                     <span class="w3-xlarge">5 months</span><br>
@@ -218,7 +221,7 @@
             <!-- End About Section -->
 
         <!-- Contact Section -->
-        <div class="w3-padding-32 w3-content w3-text-grey" id="contact" style="margin-bottom:64px; color:white">
+        <div class="w3-padding-32 w3-content" id="contact" style="color:white">
             <h3 class=".w3-padding-16">Contact Me</h3>
             <hr class=".w3-padding-16">
 
@@ -236,7 +239,7 @@
         </div>
 
         <!-- Footer -->
-        <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin:-24px">
+        <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin:-22px">
             <i class="fa fa-github w3-hover-opacity" onclick="parent.open('https://github.com/ppatil1851')"></i>
             <i class="fa fa-linkedin w3-hover-opacity" onclick="parent.open('https://www.linkedin.com/in/patilpriyanka982/')"></i>
             <!-- End footer -->
