--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <!-- Header -->
         <header class="w3-container w3-center" style="padding:128px 16px; color:white" id="home">
-            <h1 class="w3-jumbo"><b>Priyanka Patil</b></h1>
+            <h1 class="w3-jumbo" style="color:red"><b>Priyanka Patil</b></h1>
             <p>Software Engineer</p>
             <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
             <i class="fa fa-download" onclick=""><a href="./pdf/Priyanka_Patil.pdf" target="_blank"> Download Resume </a></i>
@@ -104,7 +104,7 @@
         </header>
         
          <div class=".w3-padding-16" id="about">
-            <h3 class=".w3-padding-16">About</h3>
+            <h3 class=".w3-padding-16" style="text-align:center;color:red">About</h3>
             <hr class=".w3-padding-16">
             <p>A computer science professional with a master's degree from the University of Texas at Arlington and a bachelor's degree from the University of Mumbai. I specialize in software development, web-based application development, and data analysis.
                 My technical skills include proficiency in JavaScript, Python, and Java. I have experience with frameworks like Django, Flask, and ReactJS. I've worked with SQL, MySQL, and MongoDB databases, and I'm familiar with cloud technologies such
@@ -114,8 +114,8 @@
         </div>
 
         <!-- Portfolio Section -->
-        <div class="w3-padding-32 w3-content" id="portfolio" style="color:white">
-            <h3 class=".w3-padding-16">My Projects</h3>
+        <div class=".w3-padding-16" id="portfolio">
+            <h3 class=".w3-padding-16" style="text-align:center;color:red">My Projects</h3>
             <hr class=".w3-padding-16">
 
             <!-- Grid for projects -->
@@ -135,9 +135,9 @@
             </div>
             <!-- End Portfolio Section -->
         </div>
-
+        <br>
         <!-- About Section -->
-        <h3 class=".w3-padding-16">Skills</h3>
+        <h3 class=".w3-padding-16" style="text-align:center;color:red">Skills</h3>
             <hr class=".w3-padding-16">
             <p class="w3-wide">Python</p>
             <div class="w3-light-grey">
@@ -159,7 +159,7 @@
             <div class="w3-light-grey">
                 <div class="w3-container w3-center w3-padding-small w3-dark-grey" style="width:85%">95%</div>
             </div><br>
-            <h3 class="w3-padding-16">Volunteering</h3>
+            <h3 class=".w3-padding-16" style="text-align:center;color:red">Volunteering</h3>
             <hr class=".w3-padding-16">
             <div class="w3-row w3-center w3-dark-grey w3-padding-16 w3-section" style="width:60%">
                 <div class=".w3-padding-16">
@@ -169,7 +169,7 @@
                     <p>Location: California, United States </p>
                 </div>
             </div>
-            <h3 class="w3-padding-16">Professional Experience</h3>
+            <h3 class=".w3-padding-16" style="text-align:center;color:red">Professional Experience</h3>
             <hr class=".w3-padding-16">
             <div class="w3-row w3-center w3-dark-grey w3-padding-16 w3-section" style="width:60%">
                 <div class=".w3-padding-16">
@@ -200,29 +200,10 @@
             <i class="fa fa-download" onclick=""><a href="./pdf/Priyanka_Patil.pdf" target="_blank"> Download Resume </a></i>
             </button>
 
-            <!-- Grid for tables -->
-            <h3 class="w3-padding-16">Open to work</h3>
-            <div class="w3-row-padding" style="margin:0 -16px">
-                <div class="w3-half w3-margin-bottom">
-                    <ul class="w3-ul w3-center w3-card w3-hover-shadow">
-                        <li class="w3-dark-grey w3-xlarge w3-padding-32">Software Engineer</li>
-                        <li class="w3-dark-grey w3-xlarge w3-padding-32">Python Developer</li>
-                        <li class="w3-dark-grey w3-xlarge w3-padding-32">Full Stack Developer</li>
-                        <li class="w3-dark-grey w3-xlarge w3-padding-32">Database Developer</li>
-                        <li class="w3-padding-16">
-                            <h2>$ 90000 to 95000</h2>
-                            <span class="w3-opacity">per year</span>
-                        </li>
-                    </ul>
-                </div>
-                <!-- End tables -->
-            </div>
-
-            <!-- End About Section -->
 
         <!-- Contact Section -->
-        <div class="w3-padding-32 w3-content" id="contact" style="color:white">
-            <h3 class=".w3-padding-16">Contact Me</h3>
+        <div class=".w3-padding-16" id="contact" style="color:white">
+            <h3 class=".w3-padding-16" style="text-align:center;color:red">Contact Me</h3>
             <hr class=".w3-padding-16">
 
             <div class="w3-section" style="color:white">
@@ -230,12 +211,7 @@
                 <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +1 (682)-336-7197</p>
                 <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: ppatil1851@gmail.com</p>
             </div>
-
-            <!-- Image of location/map -->
-            <div class="google-map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1612512.1042362705!2d-123.73971127536707!3d37.87344532383445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808583a3a688d7b5%3A0x8c891b8457461fa9!2sSan%20Francisco%20Bay%20Area%2C%20CA!5e0!3m2!1sen!2sus!4v1696361204438!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-              </div>
-            <!-- End Contact Section -->
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1612512.1042362705!2d-123.73971127536707!3d37.87344532383445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808583a3a688d7b5%3A0x8c891b8457461fa9!2sSan%20Francisco%20Bay%20Area%2C%20CA!5e0!3m2!1sen!2sus!4v1696361204438!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></iframe>
         </div>
 
         <!-- Footer -->
